--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,57 @@
 .App {
   background-color: #111;
 }
+.mainDiv{
+  border: 1px solid red;
+  width: 100%;
+  height: 400px;
+  background-color:  #0F0617;
+}
+.fstdiv{
+  width: 80%;
+  height: 100px;
+  /* display: flex; */
+  
+  border: 1px solid wheat;
+  margin: auto;
+  margin-top: 3%;
+}
+.D{
+  color: #FFFFFF;
+  display: flex;
+}
+.img{
+  width: 120px;
+  height: 45px;
+  margin-left: 5px;
+}
+.h3{
+  font-size: 14px;
+  margin-top:6px;
+  margin-right: 2px;
+  color:#FFFFFFB3;
+  
+}
+.h4{
+  color: #FFFFFF;
+  font-size: 12px;
+  font-weight: 100;
+  margin-top: 2%;
+}
+.h4:hover{
+  color: #8230C6;
+  cursor: pointer;
+}
+.seconDiv{
+  margin-top: 2%;
+}
+.bigDiv{
+  border: 1px solid green;
+  width: 80%;
+  height:200px;
+  margin: auto;
+  display: flex;
+}
+.bigDiv>div{
+  border: 1px solid blue;
+}
